--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
     "vuetify": "^3.3.10"
   },
   "devDependencies": {
