--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.3.10",
     "vuex": "^4.1.0"
   },
