--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@mdi/js": "^7.2.96",
     "@vuepic/vue-datepicker": "^5.4.0",
     "axios": "^1.4.0",
+    "mdi-vue": "^3.0.13",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue-toastification": "^2.0.0-rc.5",
